{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 116,
  "lineage": "a60f01ee-28bb-374b-91fc-f7c42423a1bd",
  "resources": [
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:851725393723:route-table/rtb-03a915bdfdc72e40c",
            "id": "rtb-03a915bdfdc72e40c",
            "owner_id": "851725393723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-042fe6ce3e5359b91",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8b87a4c2d1760ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:851725393723:route-table/rtb-03a19c1c71c46b167",
            "id": "rtb-03a19c1c71c46b167",
            "owner_id": "851725393723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe1e69f19e6126e3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8b87a4c2d1760ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd4335b9aec7e27e",
            "route_table_id": "rtb-03a915bdfdc72e40c",
            "subnet_id": "subnet-0ae55f0f2c1bd64df"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0332efd500ef37746",
            "route_table_id": "rtb-03a19c1c71c46b167",
            "subnet_id": "subnet-065604eccfa1ea0bf"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f6ded5cb8ca0ea8",
            "arn": "arn:aws:ec2:us-west-2:851725393723:elastic-ip/eipalloc-04f6ded5cb8ca0ea8",
            "association_id": "eipassoc-0e0a25da5ac85ca30",
            "domain": "vpc",
            "id": "eipalloc-04f6ded5cb8ca0ea8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0bee640b19c179310",
            "private_dns": "ip-10-0-1-182.us-west-2.compute.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-44-242-10-208.us-west-2.compute.amazonaws.com",
            "public_ip": "44.242.10.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:851725393723:internet-gateway/igw-0fe1e69f19e6126e3",
            "id": "igw-0fe1e69f19e6126e3",
            "owner_id": "851725393723",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0e8b87a4c2d1760ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f6ded5cb8ca0ea8",
            "association_id": "eipassoc-0e0a25da5ac85ca30",
            "connectivity_type": "public",
            "id": "nat-042fe6ce3e5359b91",
            "network_interface_id": "eni-0bee640b19c179310",
            "private_ip": "10.0.1.182",
            "public_ip": "44.242.10.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-065604eccfa1ea0bf",
            "tags": {
              "Name": "my_nat_gateway"
            },
            "tags_all": {
              "Name": "my_nat_gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:851725393723:security-group/sg-04f1ec537409caa96",
            "description": "default security group for VPC lan 1",
            "egress": [],
            "id": "sg-04f1ec537409caa96",
            "ingress": [],
            "name": "terraform-20241113071459531100000001",
            "name_prefix": "terraform-",
            "owner_id": "851725393723",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8b87a4c2d1760ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:851725393723:subnet/subnet-0ae55f0f2c1bd64df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae55f0f2c1bd64df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725393723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0e8b87a4c2d1760ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:851725393723:subnet/subnet-065604eccfa1ea0bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065604eccfa1ea0bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725393723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0e8b87a4c2d1760ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:851725393723:vpc/vpc-0e8b87a4c2d1760ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-054c6869648e448bb",
            "default_route_table_id": "rtb-0590f3b7231e2f108",
            "default_security_group_id": "sg-011a722fb194e28be",
            "dhcp_options_id": "dopt-0d4e028110eef8c28",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8b87a4c2d1760ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0590f3b7231e2f108",
            "owner_id": "851725393723",
            "tags": {
              "Name": "group16_vpc"
            },
            "tags_all": {
              "Name": "group16_vpc"
            }
          }
        }
      ]
    }
  ]
}